# gel

./: Cargo.toml  README.md  package.json
.changeset/: config.json
.github/workflows/: release.yml
crates/gel-core/: Cargo.toml  TESTING.md
crates/gel-core/src/: apply.rs  config.rs  error.rs  import.rs  journal.rs  lib.rs  plan.rs  snapshot.rs  snapshot_btrfs.rs  state.rs  sys.rs
crates/gel-core/src/backend/: arch.rs  fake.rs  file.rs  mod.rs  service.rs  settings.rs
crates/gel-core/tests/: arch_integration.rs
examples/host-config/: Cargo.toml
examples/host-config/src/: main.rs
examples/starter/: Cargo.toml
examples/starter/src/: main.rs
misc/packaging/aur/omnidotdev-gel/: PKGBUILD
misc/packaging/aur/omnidotdev-gel-bin/: PKGBUILD
misc/test/: Dockerfile
scripts/: bootstrap.sh  test-arch.sh  test-nspawn.sh
src/: eval.rs  main.rs  paths.rs  render.rs  system.rs
tests/: cli.rs
