[package]
name = "gel-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Omni <team@omni.dev>"]
description = "Core library for gel: state model, diff planner, and apply engine"
license = "Apache-2.0"
repository = "https://github.com/omnidotdev/gel"
homepage = "https://gel.omni.dev"
keywords = ["arch-linux", "declarative", "system", "configuration"]
categories = ["config", "os"]

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
cargo_common_metadata = "allow"
